--- a/src/components/DataRowProject/DataRowProject.scss
+++ b/src/components/DataRowProject/DataRowProject.scss
@@ -1,6 +1,6 @@
 .dataRowProject {
   width: 100%;
-  height: 90%;
+  height: 50%;
   display: flex;
   align-items: flex-start;
   margin: 1px 0;
